test/arrays/literals/hetLiteralsUnifiable.compopts
-sinferArrayLiteralTypeFromFirstElt=true    # hetLiteralsUnifiable.good
-sinferArrayLiteralTypeFromFirstElt=false   # hetLiteralsUnifiable-ok.good
